lots of UI changes - tell me if any links are broken

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/About.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/About.cshtml
@@ -1,7 +1,19 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+﻿<h2>About</h2>
+<p>
+    This was an ISSP 2016 Project built by a CST (IS) team for 
+    the BCIT School of Construction and the Environment (Building
+    Science Centre of Excellence).
+</p>
+<p>
+    This project was built using .NET Framework 4.5, MySQL, jQuery,
+    Bootstrap and D3.js.
+</p>
+<h3>The Team</h3>
+<ul>
+    <li>Jin An</li>
+    <li>Byunghak Kim</li>
+    <li>Don Li</li>
+    <li>She Jong Shon</li>
+    <li>Doug Horn - Client</li>
+    <li>Bruce Link - Supervisor</li>
+</ul>
