--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Contact.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Contact.cshtml
@@ -2,16 +2,32 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+<p>
+    <strong>Dr. Fitsum Tariku</strong><br/>
+    Director, Building Science Centre of Excellence<br/>
+    T 604-432-8402
+</p>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <strong>Mailing Address:</strong><br/>
+    BCIT, Building Science Centre of Excellence<br/>
+    3700 Willingdon Avenue<br />
+    Burnaby, B.C.<br />
+    V5G 3H2<br />
 </address>
-
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>E-mail Address:</strong><br/>
+    <a href="mailto:bsce@bcit.ca">bsce@bcit.ca</a><br/>
 </address>
+<p>
+    Our research centre is located in the JW Inglis Building (NE1-248). Please contact us if you have any questions, would like to discuss joint research projects or visit our facilities.<br/>
+    <strong>
+        Burnaby Campus Map and Parking Information:
+    </strong>
+    <br/> <a href="http://www.bcit.ca/about/burnaby.shtml" target="_blank">http://www.bcit.ca/about/burnaby.shtml</a>
+</p>
+
+
+
+
