--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@ function showDivs(n) {
     <h4>
         Please log on to select project what you would like to work on.
     </h4>
-    <a href="http://www.bcit.ca/construction/" class="btn btn-primary btn-lg active">Research about BSCE <span class="glyphicon glyphicon-ok"></span></a>
+    <a href="http://www.bcit.ca/construction/" target="_blank" class="btn btn-primary btn-lg active">Research about BSCE <span class="glyphicon glyphicon-ok"></span></a>
 </div>
     <!--
     <div class="row">
