--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
@@ -4,11 +4,17 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Project Details</h2>
 
-<div>
-    <h4>Project</h4>
+<div>    
     <hr />
+    <p>
+        <input type="submit" value="Back" class="btn btn-default" onclick="location.href='@Url.Action("Index", "Projects")'">
+        <input type="submit" value="Edit" class="btn btn-default" onclick="location.href='@Url.Action("Edit", "Projects", new { id = Model.ProjectId } )'"><br />
+        @*@Html.ActionLink("Edit", "Edit", new { id = Model.ProjectId }) |
+        @Html.ActionLink("Back to List", "Index")*@
+    </p>
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ProjectName)
@@ -94,7 +100,3 @@
         </dd>
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProjectId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
