--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     @if (User.IsInRole("Student"))
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                        <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
                         <li>@Html.ActionLink("Charts", "Index", "Charts")</li>
 
                     }
@@ -33,12 +33,9 @@
                     @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
                     {
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("UserGroup", "Index", "UserGroups")</li>
-                        <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                        <li>@Html.ActionLink("Projects", "Index", "Projects")</li>
                         <li>@Html.ActionLink("Users", "Index", "Users")</li>
                         <li>@Html.ActionLink("Charts", "Index", "Charts")</li>
-
-
                     }
 
                     <li>@Html.ActionLink("About", "About", "Home")</li>
