--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Create.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Create.cshtml
@@ -6,14 +6,19 @@
 }
 
 <h2>Create</h2>
-@ViewBag.PassLength
+<input type="submit" value="Back" class="btn btn-default" onclick="location.href='@Url.Action("Index", "Users")'"><br />
+@if (ViewBag.PassLength != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @ViewBag.PassLength
+    </div>
+}
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>ApplicationUser</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -26,13 +31,22 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.PasswordHash, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @*@Html.PasswordFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.EditorFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } }) <div class="alert alert-info" role="alert" style="display:inline-block;">(Must be 6+ characters)</div>
+                @Html.ValidationMessageFor(model => model.PasswordHash, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.fName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -40,7 +54,7 @@
                 @Html.ValidationMessageFor(model => model.fName, "", new { @class = "text-danger" })
             </div>
         </div>
-  
+
         <div class="form-group">
             @Html.LabelFor(model => model.lName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -49,49 +63,15 @@
             </div>
         </div>
 
-        <h3>Role</h3>
         @using (Html.BeginForm("Create", "Users"))
         {
-            <p>
-                Role Name: @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.RoleDropdownlist, htmlAttributes: new { @class = "form-control" })
-            </p>
+            <div class="form-group">
+                <div class="control-label col-md-2">Role Name:</div>
+                <div class="col-md-10">
+                    @Html.DropDownList("RoleName", (IEnumerable<SelectListItem>)ViewBag.RoleDropdownlist, htmlAttributes: new { @class = "form-control" })
+                </div>
+            </div>
         }
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.EmailConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.EmailConfirmed)
-                    @Html.ValidationMessageFor(model => model.EmailConfirmed, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PasswordHash, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.PasswordFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })
-                @*@Html.EditorFor(model => model.PasswordHash, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.ValidationMessageFor(model => model.PasswordHash, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.LockoutEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.LockoutEnabled)
-                    @Html.ValidationMessageFor(model => model.LockoutEnabled, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AccessFailedCount, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AccessFailedCount, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccessFailedCount, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
