--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/ManageUserRoles.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/ManageUserRoles.cshtml
@@ -5,7 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Manage User Roles</h2>
-@Html.ActionLink("Create New Role", "Create", "Roles")
+
+<div class="btn-group" role="group" aria-label="...">
+    <input type="submit" value="Back" class="btn btn-default" onclick="location.href='@Url.Action("Index", "Users")'">
+    <input type="submit" value="Create" class="btn btn-default" onclick="location.href='@Url.Action("Create", "Users")'">
+</div>
+@*@Html.ActionLink("Back", "Index", "Users")
+@Html.ActionLink("Create New Role", "Create", "Roles")*@
+
 <hr />
 
 @if (ViewBag.Message != null)
