--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/RemoveGroup.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/RemoveGroup.cshtml
@@ -28,16 +28,16 @@
 }
 
 <h2>Remove Group of Sensors</h2>
-@foreach (var i in ViewBag.ProjectTypes)
-{
-    string val = i;
-    <div class="btn-group" data-toggle="buttons">
-        <label class="btn btn-default">
+<div class="btn-group" data-toggle="buttons">
+    @foreach (var i in ViewBag.ProjectTypes)
+    {
+        string val = i;
+        <label class="btn btn-primary">
             @Html.RadioButton("SelectedType", val)
             <span>@val</span>
         </label>
-    </div>
-}
+    }
+</div>
 <div>
     @Html.ActionLink("Back to Project Details", "Details", "Projects", new { id = ViewBag.projectId }, null)
 </div>
