--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen">
+﻿<link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
 <link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 <body>
