--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/DateTime.cshtml
@@ -3,19 +3,28 @@
 <link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 <body>
 </body>
-<div class="container">
+<div class="container" style="margin-top:20px;">
     <form action="" class="form-horizontal">
         <fieldset>
             <div class="control-group">
-                <label>
-                    Select Start and End DateTime
-                </label>
                 <div class="controls input-append date form_datetime" data-date="2016-05-22T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                    <input size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-                    <span class="add-on"><i class="icon-th"></i></span>
+                    <b>
+                        Select Start DateTime:
+                        <input size="20" type="text" id="StartTime" value="" readonly>
+                        <span class="add-on"><i class="icon-remove"></i></span>
+                        <span class="add-on"><i class="icon-th"></i></span>
+                    </b>
                 </div>
                 <input type="hidden" id="dtp_input1" value="" /><br />
+                <div class="controls input-append date form_datetime" data-date="2016-05-22T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input2">
+                    <b>
+                        Select End DateTime:&nbsp;
+                        <input size="20" type="text" id="EndTime" value="" readonly>
+                        <span class="add-on"><i class="icon-remove"></i></span>
+                        <span class="add-on"><i class="icon-th"></i></span>
+                    </b>
+                </div>
+                <input type="hidden" id="dtp_input2" value="" /><br />
             </div>
         </fieldset>
     </form>
@@ -27,6 +36,7 @@
 <script type="text/javascript">
     $('.form_datetime').datetimepicker({
         //language:  'ca',
+        format: 'yyyy-mm-dd hh:i',
         weekStart: 1,
         todayBtn: 1,
         autoclose: 1,
@@ -35,5 +45,35 @@
         forceParse: 0,
         showMeridian: 1
     });
+
+    $("#StartTime").change((function () {
+        var StartTime = $('#StartTime').val();
+        $('#EndTime').val(StartTime);
+    }));
+
+    $("#EndTime").change((function () {
+        var FDTS = document.getElementById("StartTime").value;
+        var EDTS = document.getElementById("EndTime").value;
+
+        if (FDTS > EDTS) {
+            alert("Start Time must be earlier than End Time.");
+            var StartTime = $('#StartTime').val();
+            $('#EndTime').val(StartTime);
+        }
+    }));
+
+    function DateTime() {
+        var FDTS = document.getElementById("StartTime").value;
+        var EDTS = document.getElementById("EndTime").value;
+
+        if (FDTS > EDTS) {
+            alert("Start Time must be earlier than End Time.");
+        } else {
+            chk(FDTS, EDTS);
+            alert("go");
+            //alert(SensorList + " " + FDTS + " " + EDTS);
+        }
+    }
+
 
 </script>
