--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/_PartialReport.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/_PartialReport.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<SensorDataModel.Models.Sensor>
 
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+<script type="text/javascript" src="~/Scripts/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+<script type="text/javascript" src="~/Scripts/bootstrap-datetimepicker.js"></script>
 
 <body>
 </body>
@@ -31,9 +37,9 @@
         </fieldset>
     </form>
 </div>
-<input type="submit" value="Chart" class="btn btn-primary btn-large" onclick="SendValues(SensorList, FDTS, EDTS);">
-<input type="submit" value="Chart" class="btn btn-primary btn-large" onclick="SendValues2(SensorList, FDTS, EDTS);">
-
+@*<input type="submit" value="Chart" class="btn btn-primary btn-large" onclick="SendValues(SensorList, FDTS, EDTS);">
+    <input type="submit" value="Chart" class="btn btn-primary btn-large" onclick="SendValues2(SensorList, FDTS, EDTS);">*@
+<input type="submit" value="Chart" id="test" class="btn btn-primary btn-large" onclick="">
 <table class="table">
     <tr>
         <th>
@@ -49,12 +55,15 @@
 
     @foreach (var item in Model)
     {
+
         <tr>
             @*<td>
                     @Html.DisplayFor(modelItem => item.SensorName)
                 </td>*@
             <td>
-                @Html.DisplayFor(model => item.SensorName, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="sensorname" id="@item.SensorName">
+                    @Html.DisplayFor(model => item.SensorName, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
             </td>
             <td>
                 @Html.DisplayFor(model => item.DateTime, new { htmlAttributes = new { @class = "form-control" } })
@@ -65,4 +74,57 @@
         </tr>
     }
 </table>
+<script>
 
+
+    $('.form_datetime').datetimepicker({
+        //language:  'ca',
+        format: 'yyyy-mm-dd hh:ii',
+        weekStart: 1,
+        todayBtn: 1,
+        autoclose: 1,
+        todayHighlight: 1,
+        startView: 2,
+        forceParse: 0,
+        showMeridian: 1
+    });
+</script>
+
+@*<q></q>*@
+
+<script type="text/javascript">
+
+    var list2 = $(".sensorname").map(function(){
+        return this.id;
+    }).get();
+    //$("q").html(list2.join());
+    var SensorList = list2.join();
+    alert(SensorList);
+    $("#test").click((function (e) {
+        var FDTS = document.getElementById("StartTime").value;
+        var EDTS = document.getElementById("EndTime").value;
+
+        if (FDTS > EDTS) {
+            alert("Start Time must be earlier than End Time.");
+        } else {
+            pass(SensorList, FDTS, EDTS);
+        }
+    }));
+
+    function pass(SensorList, FDTS, EDTS) {
+
+        $.ajax({
+            url: '/Charts/Report',
+            type: "GET",
+            dataType: "json",
+            data: {
+                SensorList: SensorList,
+                FDTS: FDTS,
+                EDTS: EDTS
+            },
+            success: function (result) {
+                alert("success");
+            }
+        });
+    }
+</script>
